Static test fix